--- a/css/styles.css
+++ b/css/styles.css
@@ -11402,7 +11402,7 @@ p.lead {
   margin-right: 0;
 }
 .social-icons .social-icon:hover {
-  background-color: #bd5d38;
+  background-color: #2B7A78;
 }
 
 .dev-icons {
