--- a/css/styles.css
+++ b/css/styles.css
@@ -11438,6 +11438,7 @@ section.resume-section .resume-section-content {
 .portfolio-img {
   width: 250px;
   height: 175px;
+  box-shadow: 0px 0px 5px #000000;
 }
 .portfolio-img:hover {
   cursor: zoom-in;
