collapsible button for code gists

--- a/css/styles.css
+++ b/css/styles.css
@@ -75,6 +75,13 @@
     scroll-behavior: smooth;
   }
 }
+.content {
+  padding: 0 18px;
+  background-color: white;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
+}
 
 body {
   margin: 0;
